--- a/tp4/PostHubClient/package.json
+++ b/tp4/PostHubClient/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@glidejs/glide": "^3.7.1",
     "bootstrap": "^5.3.5",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
