--- a/tp4/PostHubClient/package.json
+++ b/tp4/PostHubClient/package.json
@@ -24,6 +24,7 @@
     "@glidejs/glide": "^3.7.1",
     "bootstrap": "^5.3.5",
     "jquery": "^3.7.1",
+    "ngx-glide": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.1.2",
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.0",
+    "@types/glidejs__glide": "^3.6.6",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
